fixed jquery error with mouseleave not firing, made information more readable when clicking on seat

--- a/css/seat-picker.css
+++ b/css/seat-picker.css
@@ -6,9 +6,11 @@
  * Green          - #7D8C45
  */
 
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -20,6 +22,10 @@
  * Main Layout
  */
 
+.seat-picker main {
+ width:75%;
+ margin:0 auto;
+}
 
 #sidebar {
   position:fixed;
@@ -27,12 +33,6 @@
   bottom:0;
   right:0;
   width:25%;
-}
-
-.seat-picker main {
-  width:75%;
-  margin:0 25% 0 0;
-  padding-left: 5%;
 }
 
 /**
@@ -44,18 +44,25 @@
   margin-bottom: 20px;
 }
 
+#seat-select {
+  margin: 0 auto;
+}
 #seat-select li {
   display:block;
   width:100px;
   float:left;
   height:100px;
   margin:10px;
+  line-height: 100px;
 }
 #seat-select .seat {
   border-radius:10px;
   text-align:center;
 }
 
+#seat-select span {
+  display:none;
+}
 #seat-select .aisle {
   background-color:none;
 }
@@ -75,6 +82,8 @@
 
 .legend li {
   float:left;
+  line-height:100px;
+  text-align:center;
 }
 
 .legend span.seat {
@@ -107,4 +116,17 @@
   display:none;
   clear:left;
   width: 100%;
+}
+
+#seat-info caption {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#seat-info tr:first-child {
+  margin-right: 5px;
+}
+
+#seat-info .not-available {
+  color:red;
 }
